<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentLocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewCurrentLocation"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:srcCompat="@drawable/currentplace" />

        <TextView
            android:id="@+id/textViewCurrentLocationId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/textViewCurrentLocation"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGetLocation" />

        <Button
            android:id="@+id/buttonNextCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="100dp"
            android:text="@string/btnNextCurrentLocation" />
    </LinearLayout>
</FrameLayout>