<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <!-- Profile Image -->

        <!-- User Name -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewUserIcon"
            android:layout_width="105dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/baseline_account_circle_24"
            app:civ_border_width="2dp" />

        <!-- Breakdown Image -->


        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_below="@id/imageViewUserIcon"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="-69dp"
            android:layout_marginEnd="43dp"
            android:layout_toEndOf="@+id/imageViewUserIcon"
            android:text="@string/hello_blank_fragment"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewUserName"
            android:layout_marginTop="45dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewBreakDownIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/breakdownicon" />

            <TextView
                android:id="@+id/textViewBreakDownType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Breakdown Type"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewPhoneIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_phone_24" />

            <TextView
                android:id="@+id/textViewPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Phone Number"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoLayoutTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoLayout"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewCreatedDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_date_range_24" />

            <TextView
                android:id="@+id/textViewCreatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginStart="8dp"
                android:textColor="@color/cardview_dark_background"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/infoLayoutFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoLayoutTwo"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewLocationIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_location_on_24" />
            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Location"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoLayoutFour"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageViewBreakDown"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_below="@+id/textViewDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/breakdownpicture" />

        <Button
            android:id="@+id/buttonAcceptRequest"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_below="@+id/imageViewBreakDown"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1E407A"
            android:text="@string/AcceptRequest"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonRejectRequest"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_below="@+id/buttonAcceptRequest"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:backgroundTint="#1E407A"
            android:text="@string/BtnRejectRequest"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>
